--- a/einleitung.tex
+++ b/einleitung.tex
@@ -6,7 +6,7 @@
 %Zeitlich immer mehr Relevant
 Kaum ein Gebiet existiert so lange wie maschinelles Lernen und erlebte in den letzten 20 Jahren einen Aufschwung in den Punkten Relevanz, Weiterentwicklung und Alltagstauglichkeit wie kein anderes Gebiet der Informationstechnologie. 
 Ein Umstand dafür ist unter anderem die technische Voraussetzung große Systeme zu entwickeln und diese auch der Menschheit zugänglich zu machen. 
-Im Speziellen wurde hierbei der Fokus auf neuronale Netzwerke, gelegt welche noch weiter erforscht werden, aber auch schon im Einsatz sind. \newline
+Im Speziellen wurde hierbei der Fokus auf neuronale Netzwerke gelegt, welche noch weiter erforscht werden, aber auch schon im Einsatz sind. \newline
 
 \noindent
 Die großen Datenmengen, die in den letzten Jahren zu verarbeiten und zu analysieren sind, stellen ein Problem dar. 
@@ -33,8 +33,8 @@ Ein Punkt stellt das Gebiet des maschinellen Lernens generell dar, sowie die pra
 Im Speziellen bieten neuronale Netzwerke neue Möglichkeiten, Probleme in der Informationstechnologie zu lösen, sowie Vorgänge in der Natur besser zu verstehen. \newline
 
 \noindent
-Zum anderen die Frage, was ist TensorFlow, wo steht dies und wofür was dies eingesetzt werden?  
-Diese Bibliothek bietet eine gute Unterstützung, sich dem Gebiet des maschinellen Lernens zu nähern, aber auch die Möglichkeit, dies in praktischen Fällen einzusetzen. 
+Zum anderen die Frage, was ist TensorFlow, wofür steht und wofür kann dies eingesetzt werden?  
+Diese Bibliothek bietet eine gute Unterstützung sich dem Gebiet des maschinellen Lernens zu nähern, aber auch die Möglichkeit, dies in praktischen Fällen einzusetzen. 
 
 %Des Weiteren wird dies auch durch die großen Datenmassen weiter getrieben, da diese weder von einem Menschen noch von einem Algorithmus effizient analysiert werden können. 
 %Dies kommt zustande, da sich die Daten sehr schnell verändern mit welchen meist gearbeitet wird und somit ein klassischer Algorithmus erst angepasst werden muss. 
@@ -61,7 +61,7 @@ Dieses wird als praktische Repräsentation verwendet, um den Umfang der Biblioth
 \noindent
 Der Anspruch, dass sich mit dieser Technik der Datenanalyse jegliche Problemstellung gelöst werden kann, ist ausdrücklich kein Ziel dieser Arbeit. 
 Des Weiteren wird teilweise nicht tiefer auf Themen eingegangen, da dies den Rahmen dieser Arbeit übersteigen würde. 
-Diese Arbeit sollte aber als möglicher Startpunkt, für einen Einstieg in die Welt des maschinellen Lernens - neuronale Netzwerke dienen. 
+Diese Arbeit sollte aber als möglicher Startpunkt, für einen Einstieg in die Welt des maschinellen Lernens - neuronale Netzwerke, dienen. 
 
 
 %\section{Allgemeines und Motivation}
